--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
-title: Projet Mercure
-description: Trouvez la meilleure ville française pour les nomades !
+title: Remote France
+description: Quelle ville française choisir pour le télétravail ?
 show_downloads: true
 google_analytics:
 theme: jekyll-theme-cayman
