--- a/_data/villes_tier_2.yml
+++ b/_data/villes_tier_2.yml
@@ -1,27 +1,22 @@
 -
- nom: Perpignan
- loyer: 5
- animation: 5
- delinquance: 2
- internet: 3
- meteo: 5
- transport: 5
- coworking: 3
- rang: 4
- longitude: 42.69659541
- latitude: 2.89936954
--
- nom: Bordeaux
+ nom: Nantes
  loyer: 4
- animation: 5
+ animation: 4
  delinquance: 4
- internet: 3
+ internet: 4
  meteo: 3
  transport: 4
  coworking: 5
- rang: 5
- longitude: 44.85724454
- latitude: -0.573696781
+ rang: 4
+ longitude: 47.23163568
+ latitude: -1.5483100859999999
+ population: 303382
+ rentprice: 530€
+ timetoparis: 151 minutes
+ proportionrestaurants: 7
+ 4gcoverage: 99%
+ minavginternet: 95Gb/s
+ nbcoworkings: 25
 -
  nom: Toulon
  loyer: 4
@@ -31,21 +26,54 @@
  meteo: 5
  transport: 4
  coworking: 5
- rang: 6
+ rang: 5
  longitude: 43.13615897
  latitude: 5.9323963420000005
+ population: 167479
+ rentprice: 524€
+ timetoparis: 301 minutes
+ proportionrestaurants: 7
+ 4gcoverage: 97%
+ minavginternet: 91Gb/s
+ nbcoworkings: 3
 -
- nom: Le Mans
+ nom: Perpignan
  loyer: 5
- animation: 3
- delinquance: 4
+ animation: 5
+ delinquance: 2
  internet: 3
- meteo: 4
+ meteo: 5
  transport: 5
- coworking: 5
+ coworking: 3
+ rang: 6
+ longitude: 42.69659541
+ latitude: 2.89936954
+ population: 121934
+ rentprice: 405€
+ timetoparis: 332 minutes
+ proportionrestaurants: 8
+ 4gcoverage: 98%
+ minavginternet: 94Gb/s
+ nbcoworkings: 1
+-
+ nom: Mulhouse
+ loyer: 5
+ animation: 4
+ delinquance: 3
+ internet: 4
+ meteo: 3
+ transport: 5
+ coworking: 4
  rang: 7
- longitude: 47.98852567
- latitude: 0.20003049399999998
+ longitude: 47.7491633
+ latitude: 7.325700475
+ population: 110370
+ rentprice: 430€
+ timetoparis: 161 minutes
+ proportionrestaurants: 6
+ 4gcoverage: 98%
+ minavginternet: 100Gb/s
+ nbcoworkings: 2
 -
  nom: Poitiers
  loyer: 5
@@ -58,18 +86,51 @@
  rang: 8
  longitude: 46.58392077
  latitude: 0.359947653
+ population: 87918
+ rentprice: 421.415€
+ timetoparis: 96 minutes
+ proportionrestaurants: 5
+ 4gcoverage: 97%
+ minavginternet: 42Gb/s
+ nbcoworkings: 4
 -
- nom: Narbonne
- loyer: 5
+ nom: La Rochelle
+ loyer: 4
  animation: 5
- delinquance: 3
- internet: 1
- meteo: 5
- transport: 5
- coworking: 4
+ delinquance: 4
+ internet: 2
+ meteo: 4
+ transport: 4
+ coworking: 5
  rang: 9
- longitude: 43.16523999
- latitude: 3.020238687
+ longitude: 46.1620644
+ latitude: -1.174657028
+ population: 75404
+ rentprice: 545.395€
+ timetoparis: 187 minutes
+ proportionrestaurants: 9
+ 4gcoverage: 99%
+ minavginternet: 50Gb/s
+ nbcoworkings: 3
+-
+ nom: Strasbourg
+ loyer: 4
+ animation: 4
+ delinquance: 3
+ internet: 3
+ meteo: 4
+ transport: 4
+ coworking: 5
+ rang: 10
+ longitude: 48.57126798
+ latitude: 7.767526795
+ population: 277270
+ rentprice: 550€
+ timetoparis: 106 minutes
+ proportionrestaurants: 7
+ 4gcoverage: 98%
+ minavginternet: 96Gb/s
+ nbcoworkings: 4
 -
  nom: Rennes
  loyer: 4
@@ -79,18 +140,13 @@
  meteo: 2
  transport: 4
  coworking: 5
- rang: 10
+ rang: 11
  longitude: 48.11197912
  latitude: -1.681864491
--
- nom: Nîmes
- loyer: 4
- animation: 4
- delinquance: 3
- internet: 3
- meteo: 4
- transport: 4
- coworking: 5
- rang: 11
- longitude: 43.84493839
- latitude: 4.34806797
+ population: 215366
+ rentprice: 514€
+ timetoparis: 91 minutes
+ proportionrestaurants: 6
+ 4gcoverage: 99%
+ minavginternet: 99Gb/s
+ nbcoworkings: 4
