--- a/_data/villes_tier_1.yml
+++ b/_data/villes_tier_1.yml
@@ -10,7 +10,7 @@
  rang: 1
  longitude: 45.785649299999996
  latitude: 3.115545429
- population: 141 398
+ population: 141398
  rentprice: 444€
  timetoparis: 210 minutes
  proportionrestaurants: 7
@@ -22,14 +22,14 @@
  loyer: 4
  animation: 4
  delinquance: 4
- internet: 3
+ internet: 4
  meteo: 5
  transport: 4
  coworking: 5
  rang: 2
  longitude: 47.39863823
  latitude: 0.6965263759999999
- population: 136 252
+ population: 136252
  rentprice: 528€
  timetoparis: 84 minutes
  proportionrestaurants: 7
@@ -37,21 +37,21 @@
  minavginternet: 100Gb/s
  nbcoworkings: 4
 -
- nom: Le Mans
- loyer: 5
- animation: 3
+ nom: Nantes
+ loyer: 4
+ animation: 4
  delinquance: 4
- internet: 3
- meteo: 4
- transport: 5
+ internet: 5
+ meteo: 3
+ transport: 4
  coworking: 5
  rang: 3
- longitude: 47.98852567
- latitude: 0.20003049399999998
- population: 143 325
- rentprice: 395€
- timetoparis: 62 minutes
- proportionrestaurants: 4
- 4gcoverage: 96%
- minavginternet: 92Gb/s
- nbcoworkings: 4
+ longitude: 47.23163568
+ latitude: -1.5483100859999999
+ population: 303382
+ rentprice: 530€
+ timetoparis: 151 minutes
+ proportionrestaurants: 7
+ 4gcoverage: 99%
+ minavginternet: 95Gb/s
+ nbcoworkings: 25
