add google analytics

--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Remote France
 description: Quelle ville française choisir pour le télétravail ?
 show_downloads: true
-google_analytics:
+google_analytics: UA-129160412-1
 theme: jekyll-theme-cayman
